force-app/main/default/objects/clofor_com_cfs__resource__c/clofor_com_cfs__resource__c.object-meta.xml
<CustomObject>
    <description>To manage resources for expense and overhead costs</description>
    <label>リソース</label>
    <nameField>
        <displayFormat>RE-{000000}</displayFormat>
        <label>RESOURCE ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>