force-app/main/default/objects/clofor_com_cfs__resource__c/fields/clofor_com_cfs__AccountingCode__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AccountingCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ACCOUNTING CODE</label>
    <referenceTo>clofor_com_cfs__Accounting_Code__c</referenceTo>
    <relationshipName>RESOURCE</relationshipName>
    <type>Lookup</type>
</CustomField>