force-app/main/default/objects/clofor_com_cfs__resource__c/fields/clofor_com_cfs__Category__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Category__c</fullName>
    <label>CATEGORY</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Expense</fullName>
                <default>true</default>
                <label>Expense</label>
            </value>
            <value>
                <fullName>Payroll</fullName>
            </value>
            <value>
                <fullName>Insurance&amp;PIT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>