force-app/main/default/objects/clofor_com_cfs__resource__c/fields/clofor_com_cfs__ParentResourceID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ParentResourceID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PARENT RESOURCES ID</label>
    <referenceTo>clofor_com_cfs__resource__c</referenceTo>
    <relationshipName>RESOURCE</relationshipName>
    <type>Lookup</type>
</CustomField>