force-app/main/default/objects/clofor_com_cfs__resource__c/fields/clofor_com_cfs__ServiceProviderVendor__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ServiceProviderVendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SERVICE PROVIDER VENDOR</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>RESOURCE</relationshipName>
    <type>Lookup</type>
</CustomField>