force-app/main/default/objects/clofor_com_cfs__resource__c/fields/clofor_com_cfs__StartDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__StartDate__c</fullName>
    <defaultValue>today()</defaultValue>
    <label>START DATE</label>
    <type>Date</type>
</CustomField>