force-app/main/default/objects/clofor_com_cfs__resource__c/fields/clofor_com_cfs__Tax__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Tax__c</fullName>
    <label>TAX</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TAX</fullName>
            </value>
            <value>
                <fullName>NON-TAX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>