force-app/main/default/objects/clofor_com_cfs__resource__c/fields/clofor_com_cfs__Unit__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Unit__c</fullName>
    <label>UNIT</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>User</fullName>
            </value>
            <value>
                <fullName>Day</fullName>
            </value>
            <value>
                <fullName>Week</fullName>
            </value>
            <value>
                <fullName>Month</fullName>
            </value>
            <value>
                <fullName>Year</fullName>
            </value>
            <value>
                <fullName>EA</fullName>
            </value>
            <value>
                <fullName>KG</fullName>
            </value>
            <value>
                <fullName>Liter</fullName>
            </value>
            <value>
                <fullName>m2</fullName>
            </value>
            <value>
                <fullName>m3</fullName>
            </value>
            <value>
                <fullName>MTR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>