force-app/main/default/objects/clofor_com_cfs__resource__c/validationRules/clofor_com_cfs__End_Date_Must_Be_Later_Than_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>clofor_com_cfs__End_Date_Must_Be_Later_Than_Start_Date</fullName>
    <active>true</active>
    <errorConditionFormula>clofor_com_cfs__StartDate__c &gt; clofor_com_cfs__EndDate__c</errorConditionFormula>
    <errorDisplayField>clofor_com_cfs__EndDate__c</errorDisplayField>
    <errorMessage>End Date Must be later than Start Date.</errorMessage>
</ValidationRule>