force-app/main/default/objects/clofor_com_cfs__resource__c/listViews/clofor_com_cfs__All.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__All</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__ResourceName__c</columns>
    <columns>clofor_com_cfs__AccountingCode__c</columns>
    <columns>clofor_com_cfs__Active__c</columns>
    <columns>clofor_com_cfs__Category__c</columns>
    <columns>clofor_com_cfs__SubCategory__c</columns>
    <columns>clofor_com_cfs__Unit__c</columns>
    <columns>clofor_com_cfs__UnitPriceLocal__c</columns>
    <columns>clofor_com_cfs__UnitPrice__c</columns>
    <columns>clofor_com_cfs__Tax__c</columns>
    <columns>clofor_com_cfs__ServiceProviderVendor__c</columns>
    <columns>clofor_com_cfs__StartDate__c</columns>
    <columns>clofor_com_cfs__EndDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>